Changed isValidCredentials so it takes names and passwords from a csv.file. Also added Login successfful. Hello *username*" in the terminal. Next step is to make the app say Hello. (LoginController line 69++) Also added a client_credentials.csv file into the resources directory.